--- a/TB_Quest_Game/Presentation/Views/GameView.xaml
+++ b/TB_Quest_Game/Presentation/Views/GameView.xaml
@@ -5,8 +5,124 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TB_Quest_Game.Presentation.Views"
         mc:Ignorable="d"
-        Title="GameView" Height="450" Width="800">
-    <Grid>
+        Title="GameView" Height="400" Width="800" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+    <Grid Margin="5" Background="BlanchedAlmond">
+        
+        <!--#region Grid Definitions-->
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="200"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <!--#endregion-->
+        
+        <!--#region  Map-->
+        
+        <UniformGrid Grid.Column="3" Grid.RowSpan="3" Margin="5">
+            <Label Background="DarkSlateGray" Margin="3"/>
+            <Label Background="DarkSlateGray" Margin="3"/>
+            <Label Background="DarkSlateGray" Margin="3"/>
+            <Label Background="DarkSlateGray" Margin="3"/>
+            <Label Background="DarkSlateGray" Margin="3"/>
+            <Label Background="DarkSlateGray" Margin="3"/>
+            <Label Background="DarkSlateGray" Margin="3"/>
+            <Label Background="DarkSlateGray" Margin="3"/>
+            <Label Background="DarkSlateGray" Margin="3"/>
+        </UniformGrid>
+        <!--#endregion-->
+        
+        <!--#region inventory-->
+        <StackPanel Grid.Column="3" Grid.Row="3">
+            <Label Content="Map" Background="AliceBlue" HorizontalContentAlignment="Center" Margin="15 0"/>
+            <Label Content="Items" Background="AliceBlue" HorizontalContentAlignment="Center" Margin="15 100 15 0"/>
+        </StackPanel>
+        <!--#endregion-->
+        
+        <!--#region Items Bar-->
+        <Grid Grid.Column="3" Grid.Row="4" VerticalAlignment="Stretch">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0" Background="AliceBlue" Margin="3"/>
+            <Label Grid.Column="1" Background="AliceBlue" Margin="3"/>
+            <Label Grid.Column="2" Background="AliceBlue" Margin="3"/>
+            <Label Grid.Column="3" Background="AliceBlue" Margin="3"/>
+        </Grid>
+        <!--#endregion-->
+        
+        <!--#region Movmenet Buttons-->
+        <Canvas Grid.Column="1" Grid.Row="4">
+            <Button Content="Movement 1" Width="100" Height="35" Canvas.Right="250"/>
+            <Button Content="Movement 2" Width="100" Height="35" Canvas.Left="250"/>
+        </Canvas>
+        <!--#endregion-->
+
+        <!--#region NPC WINDOW-->
+        <Grid Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="75"/>
+                <ColumnDefinition Width="25"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            
+            <!--NPC WINDOW-->
+            <Label Content ="NPC WIndow" Foreground="AliceBlue" Grid.Column="2" Grid.Row="0" Grid.RowSpan="2" Background="black"/>
+            <StackPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="2">
+                <!--Player Stats-->
+                <Label Content="{Binding Player.Health}" Background="LightGreen" Margin="5"/>
+                <Label Content="{Binding Player.Lives}" Background="LightGreen" Margin="5"/>
+                <Label Content="{Binding Player.PlayerClass}" Background="LightGreen" Margin="5"/>
+            </StackPanel>
+        </Grid>
+        <!--#endregion-->
+        
+        <!--#region Player-->
+        <!--Player Icon-->
+        <Label Content ="Player Icon" 
+               Foreground="AliceBlue" 
+               Grid.Column="0" 
+               Grid.Row="0" 
+               Grid.RowSpan="2" 
+               Background="black" 
+               Margin="10"/>
+        <!--Player Name-->
+        <Label 
+               FontSize="10" 
+               Grid.Column="0" 
+               Grid.Row="2" 
+               Background="Orange" 
+               Margin="10 0 10 25"
+               Content="{Binding Player.Name}"/>
+        <!--#endregion-->
+        
+        <!--#region Help Save Quit-->
+        <StackPanel Grid.Row="3" Grid.Column="0" Margin="10 10 0 0">
+            <Button Content="Help" Margin="0 20 0 10"/>
+            <Button Content="Save" Margin="0 10"/>
+            <Button Content="Quit" Margin="0 10" Click="Quit_Button_Click"/>
+        </StackPanel>
+        <!--#endregion-->
+        
+        <!--#region Messages-->
+        <Canvas Grid.Column="1" Grid.Row="3" Margin="50 25 15 25" Background="DarkGray">
+            <TextBlock Text="Messages" Foreground="AliceBlue" Margin="0 0 10 0" Background="Gray"/>
+
+        </Canvas>
+        <!--#endregion-->
         
     </Grid>
 </Window>
