--- a/TB_Quest_Game/Presentation/Views/GameView.xaml
+++ b/TB_Quest_Game/Presentation/Views/GameView.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="TB Quest Game" Height="400" Width="800" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibility"/>
         <Style x:Key="Stats" TargetType="Label">
             <Setter Property="Background" Value="LightGreen"/>
             <Setter Property="Margin" Value="0 10 0 10"/>
@@ -53,10 +54,61 @@
         <!--#endregion-->
         
         <!--#region inventory-->
-        <StackPanel Grid.Column="3" Grid.Row="3">
-            <Label Content="Map" Background="AliceBlue" HorizontalContentAlignment="Center" Margin="15 0"/>
-            <Label Content="Items" Background="AliceBlue" HorizontalContentAlignment="Center" Margin="15 100 15 0"/>
-        </StackPanel>
+        <Grid Grid.Column="3" Grid.Row="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBox 
+                Grid.Row="0"
+                Grid.ColumnSpan="3"
+                Margin="15, 0"
+                Text="{Binding CurrentLocation.Name, Mode=OneWay}"
+                HorizontalContentAlignment="Center"
+                Background="WhiteSmoke"/>
+            <Button
+                Grid.Row="2"
+                Grid.Column="1"
+                Content="North"
+                
+                Click="NorthTravelButton_Click"/>
+            <Button
+                Grid.Row="3"
+                Grid.Column="0"
+                Content="West"
+                
+                Click="WestTravelButton_Click"/>
+            <Button
+                Grid.Row="3"
+                Grid.Column="2"
+                Content="East"
+                
+                Click="EastTravelButton_Click"/>
+            <Button
+                Grid.Row="4"
+                Grid.Column="1"
+                Content="South"
+                
+               Click="SouthTravelButton_Click" Height="23" VerticalAlignment="Top" />
+
+
+            <TextBox
+                Grid.Row="6"
+                Grid.ColumnSpan="3"
+                Margin="15, 0"/>
+
+
+        </Grid>
         <!--#endregion-->
         
         <!--#region Items Bar-->
